# algorand-vanity

./: .gitignore  LICENSE  README.md  algorand-vanity.py  algorand_vanity.py  pyproject.toml
algorand_vanity/: generator.py
src/algorand_vanity/: algorand_vanity.py
